tests/pos/import-rename/main.jo
import lib.double as dbl

def main =
  println (dbl 5)
