tests/neg/namespace-redefintion2/main.jo
namespace test

import test.lib

def main =
  lib.double 10 p
